--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,22 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+- Added `exitSpanMinDuration` configuration field, allowing end users to
+  set a time threshold for dropping exit spans. ({pull}2843[#2843])
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
 
 [[release-notes-3.37.0]]
 ==== 3.37.0 2022/07/18
