--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1332,7 +1332,7 @@ require('elastic-apm-node').start({
 })
 ----
 
-[[span-compression-same-kind-max-duration]]
+[[exit-span-min-duration]]
 ==== `exitSpanMinDuration`
 * *Type:* String
 * *Default:* `0ms`
