--- a/docs/set-up.asciidoc
+++ b/docs/set-up.asciidoc
@@ -11,8 +11,8 @@ To get you off the ground, we've prepared guides for setting up the Agent with a
 * <<koa>>
 * <<restify>>
 * <<fastify>>
-* <<lambda>>
 * <<typescript>>
+* <<lambda>>
 // end::web-frameworks-list[]
 
 Alternatively, you can <<custom-stack>>.
@@ -36,11 +36,11 @@ include::./restify.asciidoc[]
 
 include::./fastify.asciidoc[]
 
+include::./typescript.asciidoc[]
+
 include::./custom-stack.asciidoc[]
 
 include::./lambda.asciidoc[]
-
-include::./typescript.asciidoc[]
 
 [[starting-the-agent]]
 === Starting the agent
@@ -82,7 +82,7 @@ const apm = require('elastic-apm-node/start');
 // Application main code goes here.
 ----
 
-When authoring code using CommonJS (i.e. using `require(...)`), this method is rarely used. However, when using a tool (such as Babel or esbuild) to translate/transpile from code using ES modules (i.e. `import ...` statements) to code using CommonJS, this start method is necessary to ensure that the APM agent is _started before other imports in the same file_. See <<start-esm-imports>> below for details.
+This start method exists for those that use a tool like Babel or esbuild to translate/transpile from code using ES modules (as in the following example) to code using CommonJS. It ensures that the APM agent is started before other imports in the same file. See <<start-esm-imports>> below for details.
 
 [source,js]
 ----
@@ -142,12 +142,14 @@ import 'initapm'
 [[start-gotchas]]
 ==== Start gotchas
 
-This section shows some sometimes subtle surprises starting the APM agent with some technologies. A general troubleshooting tip for using the Elastic Node.js APM agent with any build tool/system that produces compiled JavaScript is to **look at the compiled JavaScript** to see what is actually being executed by `node`.
+You may run into a few subtle surprises when starting the Elastic Node.js APM agent with certain technologies. A general troubleshooting tip for using the agent with any build tool/system that produces compiled JavaScript is to look at the compiled JavaScript to see what is actually being executed by `node`.
 
 [[start-esm-imports]]
 ===== Hoisted ES module imports
 
-When using a compiler/transpiler (such as https://babeljs.io/docs/en/[Babel] or https://esbuild.github.io[esbuild]) to translate from code using ES modules (`import ...` statements) to CommonJS modules (`require(...)`) there is a common surprise for starting the Elastic Node.js APM agent. Running Babel on the following produces code that does *not* work as expected:
+When using a tool like Babel or esbuild to translate/transpile from code using ES modules (i.e. `import ...` statements) to code using CommonJS (i.e. `require(...)`), all imports are "hoisted" to the top of a module, properly following ECMAScript module (ESM) semantics. This means the `apm.start()` method is called too late—*after* the `http` module has been imported.
+
+For example, running Babel on the following code does not initiate APM early enough:
 
 [source,js]
 ----
@@ -168,7 +170,7 @@ apm.start() // This is started too late.
 // ...
 ----
 
-All imports are "hoisted" to the top of a module, properly following ECMAScript module (ESM) semantics. However, the `apm.start()` is now too late—*after* the `http` module has been imported. This is why <<start-option-require-start-module,the `elastic-apm-node/start` module>> was added as a start option. The following will work:
+The <<start-option-require-start-module,the `elastic-apm-node/start` module>> fixes this problem. The following will work:
 
 [source,js]
 ----
@@ -177,7 +179,7 @@ import http from 'http';
 // ...
 ----
 
-A more complete example is https://github.com/elastic/apm-agent-nodejs/tree/main/test/babel[here].
+A more complete example using Babel is https://github.com/elastic/apm-agent-nodejs/tree/main/test/babel[here].
 
 The same is true for ES module usage translated by esbuild (as explained well in https://esbuild.github.io/content-types/#real-esm-imports[the esbuild docs here]). Notably, TypeScript does _not_ following ECMAScript module semantics in this regard.
 
