--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -7,19 +7,74 @@ endif::[]
 
 == Supported technologies
 
-Support for the Elastic APM Node.js agent follows the support schedule of Node.js itself to the end-of-life period of each version after its maintenance term.
+The Elastic APM Node.js Agent automatically instruments various APIs in Node.js core and third-party frameworks and packages. This page lists all supported technologies and version ranges.
+
+
+[float]
+[[compatibility-node]]
+=== Node.js versions
+
+Support for the Elastic APM Node.js agent follows the https://nodejs.org/en/about/releases/[support schedule of Node.js itself]
+to the end-of-life period of each version after its maintenance term.
 Versions of Node.js past their end-of-life date are not supported.
 
 image::./images/node_release_schedule.svg[Node.js release schedule]
+
+The current APM agent version (3.x) works with Node.js versions back to v8.6. We will only break support for older Node.js versions with a major version release of the APM agent.
+
+[float]
+[[compatibility-esm]]
+=== ES Modules
+
+The Elastic APM Node.js agent does _not yet support automatically instrumenting
+https://nodejs.org/api/esm.html#modules-ecmascript-modules[ECMAScript module imports (ESM)]_, i.e. modules that are loaded via `import ...` statements. It currently only instruments https://nodejs.org/api/modules.html#modules-commonjs-modules[CommonJS module imports], i.e. modules loaded via `require(...)`.
+
+For example, in the following code the `http` module *is* instrumented:
+
+[source,js]
+----
+require('elastic-apm-node').start(/* ... */);
+
+const http = require('http'); // CommonJS require
+const server = http.createServer((req, res) => {
+    res.statusCode = 200;
+    res.end('pong');
+});
+server.listen(3000);
+----
+
+But in the following code the `http` module *is not* instrumented:
+
+[source,js]
+----
+import apm from 'elastic-apm-node/start';
+
+import http from 'http'; // ESM import
+const server = http.createServer((req, res) => {
+    res.statusCode = 200;
+    res.end('pong');
+});
+server.listen(3000);
+----
+
+However, if you are using TypeScript or JavaScript that is _compiled/translated/transpiled to CommonJS-using JavaScript_ via tools like Babel, Webpack, esbuild, etc., then using `import ...` in your source code is fine. To ensure your compiler is generating JS that uses CommonJS imports, use the following settings:
+
+- For TypeScript, use https://www.typescriptlang.org/tsconfig#module[`"module": "commonjs"` in your "tsconfig.json"] (a https://github.com/tsconfig/bases/blob/main/bases/node16.json[complete tsconfig.json example]).
+- For Babel, use https://babeljs.io/docs/en/babel-preset-env#modules[`"modules": "commonjs"` in your Babel config] (https://github.com/elastic/apm-agent-nodejs/blob/main/test/babel/.babelrc[for example]).
+- For Webpack, use `target: 'node', externalsPresets: { node: true }` in your "webpack.config.js".
+- For esbuild, use `--platform=node --target=node...` options to `esbuild` (https://github.com/elastic/apm-agent-nodejs/blob/main/examples/esbuild/package.json#L7[for example]).
+
+The ESM limitation only affects the agent's automatic instrumentation. Other functionality -- such as metrics collection, manual instrumentation and error capture -- still works when using ES modules. Support for ES modules is planned for a future version of the APM agent.
 
 
 [float]
 [[elastic-stack-compatibility]]
 === Elastic Stack Compatibility
 
-This agent is compatible with {apm-guide-ref}[APM Server] v6.5 and above.
-For support for previous releases of the APM Server,
-use version {apm-node-ref-1x}[1.x] of the agent.
+// See the APM agent compatibility table: https://www.elastic.co/guide/en/apm/guide/current/agent-server-compatibility.html
+
+This agent is compatible with {apm-guide-ref}[APM Server] v6.6 and above.
+
 
 [float]
 [[compatibility-frameworks]]
