perf: disable Knex instrumentation if spanStackTraceMinDuration=-1
Knex instrumentation exists only for better span stack traces. It should
be disabled when not collecting span stack traces. This should be a
perf win for default usage of Knex because we avoid an expensive
`Error.captureStackTrace(obj)` for each wrapped knex query.

Obsoletes: #506

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -51,6 +51,10 @@ Notes:
 [float]
 ===== Chores
 
+- Disable knex instrumentation when not collecting span stack traces
+  (because there is no point). This is a performance improvement for
+  Knex usage in the default configuration.
+
 
 [[release-notes-3.38.0]]
 ==== 3.38.0 2022/08/11
