add PR number to changelog entry

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -53,7 +53,7 @@ Notes:
 
 - Disable knex instrumentation when not collecting span stack traces
   (because there is no point). This is a performance improvement for
-  Knex usage in the default configuration.
+  Knex usage in the default configuration. ({pull}2879[#2879])
 
 
 [[release-notes-3.38.0]]
